feat(orchestrator): make CORS origins configurable via environment variables